@@ -386,6 +386,7 @@ define function, begin
 358,numberfromstring,2,0,0    #look in a string for a number and return it
 359,sliceissprite,1,0         #return true if the provided slice handle points to a sprite
 360,spritelayer,0             #return a handle to the plotsprite layer
+360,scriptlayer,0             #return a handle to the plotsprite layer
 361,freeslice,1,0             #free a slice and all its children
 362,firstchild,1,0            #return the first child of a slice or 0 if none
 363,nextsibling,1,0           #return the next sibling of a slice or 0 if none
@@ -2444,6 +2445,7 @@ define constant, begin
 -100018, sl:textbox choice box
 -100019, sl:textbox root
 -100005, sl:script layer
+-100005, sl:sprite layer
 -100006, sl:textbox layer
 -100007, sl:string layer
 -100021, sl:reserve
