@@ -67,6 +67,7 @@ CONST SL_TEXTBOX_PORTRAIT_BOX = -100017
 CONST SL_TEXTBOX_CHOICE_BOX   = -100018
 CONST SL_TEXTBOX_ROOT         = -100019
 CONST SL_SCRIPT_LAYER         = -100005
+CONST SL_SPRITE_LAYER         = -100005  'Alias
 CONST SL_TEXTBOX_LAYER        = -100006
 CONST SL_STRING_LAYER         = -100007
 CONST SL_RESERVE              = -100021
